--- a/css/dogfind.css
+++ b/css/dogfind.css
@@ -1,37 +1,3 @@
-img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-}
-
-.inner {
-  position: relative;
-  width: 100%;
-  height: 100%;
-}
-
-.center {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.btn {
-  width: 180px;
-  height: 50px;
-  background-color: yellow;
-  border: 3px solid #000;
-  border-radius: 30px;
-  font-size: 20px;
-  cursor: pointer;
-  transition: 0.2s linear;
-}
-.btn:hover {
-  background: #fff;
-  color: #333;
-  transform: scale(1.05);
-}
-
 .board {
   margin-top: 50px;
   width: 100%;
@@ -39,39 +5,66 @@ img {
   padding: 15px 150px;
 }
 .board .boardName {
-  width: 405px;
+  width: 407px;
   height: 40px;
+  font-weight: bold;
   font-size: 25px;
 }
 .board .boardName .bar {
+  margin-top: 2px;
   width: 100%;
   height: 3px;
-  background: yellow;
+  background: #AEF2D9;
   border-radius: 1.5px;
 }
 .board .searchBox {
   position: absolute;
   top: 0;
-  right: 0;
+  right: 12%;
   width: 230px;
   height: 40px;
   padding: 5px;
-  border: 1px solid #000;
+  border: 1px solid #42594A;
   border-radius: 30px;
   overflow: hidden;
   flex-wrap: wrap;
+  transition: 0.2s linear;
+  box-shadow: inset 0px 0px 3px #42594A;
+}
+.board .searchBox.onFocus {
+  box-shadow: inset 0px 0px 3px #AEF2D9;
 }
 .board .searchBox input {
   height: 100%;
-  width: 160px;
+  width: 180px;
   border: none;
   outline: none;
-  font-size: 18px;
+  font-size: 16px;
 }
 .board .searchBox .searchIcon {
   width: 20px;
   height: 20px;
   cursor: pointer;
+}
+.board .searchBox .searchIcon.onFocus svg path {
+  fill: #AEF2D9;
+  stroke: #42594A;
+  stroke-width: 2;
+}
+.board .searchBox .searchIcon svg path {
+  fill: #42594A;
+  stroke: #42594A;
+  stroke-width: 2;
+  transition: 0.2s linear;
+}
+.board .write {
+  position: absolute;
+  top: 0px;
+  right: 0;
+  height: 40px;
+  width: 80px;
+  font-size: 16px;
+  font-weight: bold;
 }
 .board .boardList {
   width: 100%;
@@ -86,9 +79,10 @@ img {
   height: 350px;
   border-radius: 20px;
   overflow: hidden;
-  border: 1px solid #000;
   cursor: pointer;
   transition: 0.3s linear;
+  background-color: #F2EFE9;
+  box-shadow: 1px 1px 5px #42594A;
 }
 .board .boardList .card:hover {
   transform: scale(1.05);
@@ -96,10 +90,12 @@ img {
 .board .boardList .card img {
   width: 100%;
   height: 60%;
+  box-shadow: 1px 0px 4px #42594A;
 }
 .board .boardList .card .cardText {
-  padding: 5px;
-  font-size: 13px;
+  padding: 7px 10px;
+  font-size: 15px;
+  text-shadow: 1px 1px 1px rgba(66, 89, 74, 0.231372549);
 }
 .board .boardList .card .cardText div {
   margin-bottom: 5px;
@@ -113,9 +109,10 @@ img {
   -webkit-line-clamp: 3;
   -webkit-box-orient: vertical;
 }
-.board .boardList .card .cardText div span {
-  font-size: 11px;
+.board .boardList .card .cardText div .name {
+  font-size: 14px;
   font-weight: bold;
+  text-shadow: none;
 }
 .board .pagination {
   width: 100%;
