--- a/css/main.css
+++ b/css/main.css
@@ -1,37 +1,3 @@
-img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-}
-
-.inner {
-  position: relative;
-  width: 100%;
-  height: 100%;
-}
-
-.center {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.btn {
-  width: 180px;
-  height: 50px;
-  background-color: yellow;
-  border: 3px solid #000;
-  border-radius: 30px;
-  font-size: 20px;
-  cursor: pointer;
-  transition: 0.2s linear;
-}
-.btn:hover {
-  background: #fff;
-  color: #333;
-  transform: scale(1.05);
-}
-
 .mainSlide {
   position: absolute;
   top: 0;
@@ -42,6 +8,7 @@ img {
   border-radius: 0px 0px 20px 20px;
   overflow: hidden;
   margin: 0 auto;
+  box-shadow: 1px 1px 10px #42594A;
 }
 .mainSlide li {
   position: absolute;
@@ -76,16 +43,16 @@ img {
 }
 .main .inner .mainText h1 {
   color: #fff;
-  text-shadow: 1px 1px 5px rgba(0, 0, 0, 0.397);
+  text-shadow: 1px 1px 5px #42594A;
   cursor: default;
+}
+.main .inner .mainText h1:nth-of-type(1) {
+  font-size: 25px;
+  margin-bottom: 10px;
 }
 .main .inner .mainText .btn {
   margin-top: 30px;
-}
-.main .inner .mainText .btn:hover {
-  background: #fff;
-  color: #333;
-  transform: scale(1.05);
+  font-size: 16px;
 }
 .main .toRight, .main .toLeft {
   position: absolute;
@@ -110,29 +77,46 @@ img {
   flex-direction: column;
 }
 .searchCode h1 {
-  font-size: 25px;
+  font-size: 35px;
   margin-bottom: 30px;
 }
 .searchCode .searchBox {
-  width: 440px;
+  width: 570px;
   height: 80px;
   padding: 10px;
-  border: 1px solid #000;
+  border: 1px solid #42594A;
   border-radius: 30px;
   overflow: hidden;
   flex-wrap: wrap;
+  transition: 0.2s linear;
+}
+.searchCode .searchBox.onFocus {
+  border: 1px solid #AEF2D9;
+  box-shadow: inset 0px 0px 5px #AEF2D9;
 }
 .searchCode .searchBox input {
   height: 100%;
-  width: 360px;
+  width: 500px;
   border: none;
   outline: none;
   font-size: 40px;
+  padding: 5px;
 }
 .searchCode .searchBox .searchIcon {
   width: 40px;
   height: 40px;
   cursor: pointer;
+}
+.searchCode .searchBox .searchIcon.onFocus svg path {
+  fill: #AEF2D9;
+  stroke: #42594A;
+  stroke-width: 2;
+}
+.searchCode .searchBox .searchIcon svg path {
+  fill: #42594A;
+  stroke: #42594A;
+  stroke-width: 2;
+  transition: 0.2s linear;
 }
 
 .simpleIntro {
@@ -146,22 +130,24 @@ img {
   background-attachment: fixed;
   overflow: hidden;
   border-radius: 20px;
+  box-shadow: inset 0px 0px 20px #000000;
 }
 .simpleIntro .simpleContent {
-  width: 300px;
-  height: 300px;
-  border-radius: 50%;
+  width: 700px;
+  height: 400px;
+  border-radius: 10%;
   flex-direction: column;
-  background: radial-gradient(circle, rgba(41, 41, 41, 0.5) 30%, rgba(101, 101, 101, 0.8) 40%, rgba(75, 75, 75, 0) 100%);
+  background: radial-gradient(circle, rgba(41, 41, 41, 0.5) 20%, rgba(101, 101, 101, 0.5) 30%, rgba(111, 111, 111, 0.5) 40%, rgba(122, 121, 121, 0.5) 50%, rgba(129, 129, 129, 0.5) 60%, rgba(101, 101, 101, 0) 70%);
 }
 .simpleIntro .simpleContent .logoImg {
-  width: 160px;
-}
-.simpleIntro .simpleContent .logoImg img {
-  object-fit: contain;
+  width: 100px;
+  height: 77px;
 }
 .simpleIntro .simpleContent .intro {
+  text-align: center;
+  font-weight: bold;
   color: #fff;
+  text-shadow: 1px 1px 5px #42594A;
   margin-top: 20px;
   font-size: 18px;
   line-height: 30px;
@@ -171,6 +157,8 @@ img {
   margin-top: 50px;
   width: 100%;
   height: 500px;
+  box-shadow: 1px 1px 10px #42594A;
+  border-radius: 20px;
 }
 .content .box {
   position: relative;
@@ -187,18 +175,21 @@ img {
 }
 .content .box:nth-child(1) {
   border-radius: 20px 0 0 20px;
+  box-shadow: inset -1px 0px 2px #42594A;
 }
 .content .box:nth-child(2) {
   border-radius: 0px 20px 20px 0px;
+  box-shadow: inset 1px 0px 2px #42594A;
 }
 .content .box h2 {
   text-align: center;
   font-size: 30px;
-  margin-bottom: 20px;
+  margin: 20px 0;
 }
 .content .box img {
   filter: saturate(0.8);
   transition: 0.3s linear;
+  box-shadow: 0px -1px 5px #42594A;
 }
 .content .box .btn {
   position: absolute;
@@ -224,7 +215,7 @@ img {
   position: relative;
   margin-top: 50px;
   width: 100%;
-  height: 500px;
+  height: 550px;
   padding: 15px 0px 15px 150px;
   border-radius: 20px;
   background-image: url("../images/reviewbg.jpg");
@@ -232,19 +223,26 @@ img {
   background-position: center;
   background-size: cover;
   background-attachment: fixed;
+  box-shadow: inset 0px 0px 20px #000000;
 }
 .review .inner {
   overflow: hidden;
 }
 .review .inner h1 {
+  position: absolute;
+  top: 10px;
+  left: 30px;
   font-size: 30px;
   height: 35px;
+  color: #fff;
+  text-shadow: 1px 1px 5px #42594A;
 }
 .review .inner .view {
   position: absolute;
   left: 0;
+  bottom: 0px;
   width: 2000px;
-  height: calc(100% - 35px);
+  height: calc(100% - 55px);
   display: flex;
   justify-content: flex-start;
   align-items: center;
@@ -262,7 +260,7 @@ img {
 }
 .review .inner .view .card .inner {
   border-radius: 20px;
-  box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.689);
+  box-shadow: 2px 2px 6px #000000;
 }
 .review .inner .view .card .inner .reviewImg {
   width: 100%;
@@ -312,6 +310,10 @@ img {
   width: 100%;
   height: 600px;
   padding: 15px 150px;
+}
+.kakaoMap .inner {
+  border-radius: 20px;
+  box-shadow: 1px 1px 10px #42594A;
 }
 
 /*# sourceMappingURL=main.css.map */
