--- a/css/reset.css
+++ b/css/reset.css
@@ -2,7 +2,7 @@
 * {
   margin: 0;
   padding: 0;
-  color: #333;
+  color: #0D0D0D;
   box-sizing: border-box;
   font-family: 'Nanum Gothic', sans-serif;
 }
@@ -18,5 +18,5 @@ ul,ol , li {
 
 a {
   text-decoration: none;
-  color: #333;
+  color: #0D0D0D;
 }
