--- a/scss/dogfind.scss
+++ b/scss/dogfind.scss
@@ -1,36 +1,3 @@
-// common
-img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-}
-.inner {
-  position: relative;
-  width: 100%;
-  height: 100%
-}
-.center {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-.btn {
-  width: 180px;
-  height: 50px;
-  background-color: yellow;
-  border: 3px solid #000;
-  border-radius: 30px;
-  font-size: 20px; 
-  cursor: pointer;
-  transition: .2s linear;
-
-  &:hover {
-    background: #fff;
-    color: #333;
-    transform: scale(1.05);
-  }
-}
-
 .board {
   margin-top: 50px;
   width: 100%;
@@ -38,13 +5,15 @@ img {
   padding: 15px 150px;
 
   .boardName {
-    width: 405px;
+    width: 407px;
     height: 40px;
+    font-weight: bold;
     font-size: 25px;
     .bar {
+      margin-top: 2px;
       width: 100%;
       height: 3px;
-      background: yellow;
+      background: #AEF2D9;
       border-radius: 1.5px;
     }
   }
@@ -52,29 +21,60 @@ img {
   .searchBox {
     position: absolute;
     top: 0;
-    right: 0;
+    right: 12%;
     width: 230px;
     height: 40px;
     padding: 5px;
-    border: 1px solid #000;
+    border: 1px solid #42594A;
     border-radius: 30px;
     overflow: hidden;
     flex-wrap: wrap;
+    transition: .2s linear;
+    box-shadow: inset 0px 0px 3px #42594A;
+
+    &.onFocus {
+      box-shadow: inset 0px 0px 3px #AEF2D9;
+    }
 
     input {
       height: 100%;
-      width: 160px;
+      width: 180px;
       border: none;
       outline: none;
-      font-size: 18px;
+      font-size: 16px;
     }
 
     .searchIcon {
       width: 20px;
       height: 20px;
       cursor: pointer;
+
+      &.onFocus {
+        svg path {
+          fill: #AEF2D9;
+          stroke: #42594A;
+          stroke-width: 2;
+        }  
+      }
+
+      svg path {
+        fill: #42594A;
+        stroke: #42594A;
+        stroke-width: 2;
+        transition: .2s linear;
+      }
     }
   }//searchBox
+
+  .write {
+    position: absolute;
+    top: 0px;
+    right: 0;
+    height: 40px;
+    width: 80px;
+    font-size: 16px;
+    font-weight: bold;
+  }
 
   .boardList {
     width: 100%;
@@ -90,9 +90,10 @@ img {
       height: 350px;
       border-radius: 20px;
       overflow: hidden;
-      border: 1px solid #000;
       cursor: pointer;
       transition: .3s linear;
+      background-color: #F2EFE9;
+      box-shadow: 1px 1px 5px #42594A;
 
       &:hover {
         transform: scale(1.05);
@@ -101,11 +102,13 @@ img {
       img {
         width: 100%;
         height: 60%;
+        box-shadow: 1px 0px 4px #42594A;
       }
 
       .cardText {
-        padding: 5px;
-        font-size: 13px;
+        padding: 7px 10px;
+        font-size: 15px;
+        text-shadow: 1px 1px 1px #42594a3b;
 
         div {
           margin-bottom: 5px;
@@ -119,9 +122,10 @@ img {
             -webkit-line-clamp: 3;
             -webkit-box-orient: vertical;
           }
-          span {
-            font-size: 11px;
+          .name {
+            font-size: 14px;
             font-weight: bold;
+            text-shadow: none;
           }
         }
       }
