--- a/scss/findnew.scss
+++ b/scss/findnew.scss
@@ -1,36 +1,3 @@
-// common
-img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-}
-.inner {
-  position: relative;
-  width: 100%;
-  height: 100%
-}
-.center {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-.btn {
-  width: 180px;
-  height: 50px;
-  background-color: yellow;
-  border: 3px solid #000;
-  border-radius: 30px;
-  font-size: 20px; 
-  cursor: pointer;
-  transition: .2s linear;
-
-  &:hover {
-    background: #fff;
-    color: #333;
-    transform: scale(1.05);
-  }
-}
-
 .board {
   margin-top: 50px;
   width: 100%;
@@ -38,13 +5,15 @@ img {
   padding: 15px 150px;
 
   .boardName {
-    width: 440px;
+    width: 400px;
     height: 40px;
     font-size: 25px;
+    font-weight: bold;
     .bar {
+      margin-top: 2px;
       width: 100%;
       height: 3px;
-      background: yellow;
+      background: #AEF2D9;
       border-radius: 1.5px;
     }
   }
@@ -56,23 +25,44 @@ img {
     width: 230px;
     height: 40px;
     padding: 5px;
-    border: 1px solid #000;
+    border: 1px solid #42594A;
     border-radius: 30px;
     overflow: hidden;
     flex-wrap: wrap;
+    box-shadow: inset 0px 0px 3px #42594A;
+    transition: .2s linear;
+
+    &.onFocus {
+      box-shadow: inset 0px 0px 3px #AEF2D9;
+    }
 
     input {
       height: 100%;
       width: 160px;
       border: none;
       outline: none;
-      font-size: 18px;
+      font-size: 16px;
     }
 
     .searchIcon {
       width: 20px;
       height: 20px;
       cursor: pointer;
+
+      &.onFocus {
+        svg path {
+          fill: #AEF2D9;
+          stroke: #42594A;
+          stroke-width: 2;
+        }  
+      }
+
+      svg path {
+        fill: #42594A;
+        stroke: #42594A;
+        stroke-width: 2;
+        transition: .2s linear;
+      }
     }
   }//searchBox
 
@@ -80,15 +70,16 @@ img {
     margin-top: 30px;
     width: 100%;
     height: 300px;
-    border: 1px solid #000;
     border-radius: 20px;
     padding: 30px;
+    background-color: #F2EFE9;
+    box-shadow: 1px 1px 5px #42594A;
 
     .inner {
       .name {
         justify-content: flex-start;
         .logoImg {
-          width: 55px;
+          width: 51.5px;
           height: 40px;
           margin-right: 10px;
         }
@@ -109,24 +100,61 @@ img {
   }// attention
 
   .selectArea {
+    position: relative;
     margin-top: 30px;
     width: 100%;
     height: 50px;
     justify-content: flex-start;
 
+    .box {
+      padding: 5px 10px;
+      border-radius: 20px;
+      overflow: hidden;
+      background-color: #F2EFE9;
+      box-shadow: 1px 1px 3px #42594A;
+    }
+
     select {
-      height: 80%;
+      height: 100%;
       outline: none;
       font-size: 18px;
       padding: 5px 10px;
       margin-right: 20px;
-      border-radius: 20px;
+      border: none;
+      font-weight: bold;
+      background-color: #F2EFE9;
+
+      option {
+        font-weight: bold;
+        margin: 5px;
+
+        &:checked {
+          font-weight: bold;
+        }
+      }
     }
 
     .searchIcon {
       width: 20px;
       height: 20px;
       cursor: pointer;
+
+      svg path {
+        fill: #42594A;
+        stroke: #42594A;
+        stroke-width: 2;
+        transition: .2s linear;
+      }
+    }
+
+    .write {
+      position: absolute;
+      top: 0px;
+      right: 0;
+      height: 80%;
+      width: 80px;
+      font-size: 16px;
+      font-weight: bold;
     }
   }
 
@@ -146,6 +174,8 @@ img {
       border-radius: 20px;
       overflow: hidden;
       cursor: pointer;
+      box-shadow: 2px 2px 10px #42594A;
+
       &:hover {
 
         .name {
@@ -170,7 +200,7 @@ img {
         height: 30%;
         opacity: 0;
         transition: .3s linear;
-        background: linear-gradient(0deg, rgba(255,255,255,.5) 30%, rgba(255,255,255,0) 100%);
+        background: linear-gradient(0deg, rgba(255,255,255,.6) 50%, rgba(255,255,255,0) 100%);
         font-size: 20px;
         font-weight: bold;
       }
