--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,38 +1,3 @@
-
-
-// common
-img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-}
-.inner {
-  position: relative;
-  width: 100%;
-  height: 100%
-}
-.center {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-.btn {
-  width: 180px;
-  height: 50px;
-  background-color: yellow;
-  border: 3px solid #000;
-  border-radius: 30px;
-  font-size: 20px; 
-  cursor: pointer;
-  transition: .2s linear;
-
-  &:hover {
-    background: #fff;
-    color: #333;
-    transform: scale(1.05);
-  }
-}
-
 .mainSlide {
   position: absolute;
   top: 0;
@@ -43,6 +8,7 @@ img {
   border-radius: 0px 0px 20px 20px;
   overflow: hidden;
   margin: 0 auto;
+  box-shadow: 1px 1px 10px #42594A;
 
   li {
     position: absolute;
@@ -81,18 +47,18 @@ img {
 
       h1 {
         color: #fff;
-        text-shadow: 1px 1px 5px rgba(0, 0, 0, 0.397);
+        text-shadow: 1px 1px 5px #42594A;
         cursor: default;
+
+        &:nth-of-type(1) {
+          font-size: 25px;
+          margin-bottom: 10px;
+        }
       }
 
       .btn {
         margin-top: 30px;
-
-        &:hover {
-          background: #fff;
-          color: #333;
-          transform: scale(1.05);
-        }
+        font-size: 16px;
       }
     }// mainText
   }
@@ -122,31 +88,53 @@ img {
   flex-direction: column;
 
   h1 {
-    font-size: 25px;
+    font-size: 35px;
     margin-bottom: 30px;
   }
 
   .searchBox {
-    width: 440px;
+    width: 570px;
     height: 80px;
     padding: 10px;
-    border: 1px solid #000;
+    border: 1px solid #42594A;
     border-radius: 30px;
     overflow: hidden;
     flex-wrap: wrap;
+    transition: .2s linear;
+
+    &.onFocus {
+      border: 1px solid #AEF2D9;
+      box-shadow: inset 0px 0px 5px #AEF2D9;
+    }
 
     input {
       height: 100%;
-      width: 360px;
+      width: 500px;
       border: none;
       outline: none;
       font-size: 40px;
+      padding: 5px;
     }
 
     .searchIcon {
       width: 40px;
       height: 40px;
       cursor: pointer;
+
+      &.onFocus {
+        svg path {
+          fill: #AEF2D9;
+          stroke: #42594A;
+          stroke-width: 2;
+        }  
+      }
+
+      svg path {
+        fill: #42594A;
+        stroke: #42594A;
+        stroke-width: 2;
+        transition: .2s linear;
+      }
     }
   }
 
@@ -164,23 +152,24 @@ img {
   background-attachment: fixed;
   overflow: hidden;
   border-radius: 20px;
+  box-shadow: inset 0px 0px 20px #000000;
 
   .simpleContent {
-    width: 300px;
-    height: 300px;
-    border-radius: 50%;
+    width: 700px;
+    height: 400px;
+    border-radius: 10%;
     flex-direction: column;
-    background: radial-gradient(circle, rgba(41, 41, 41, 0.5) 30%, rgba(101, 101, 101, 0.8) 40%,  rgba(75, 75, 75, 0) 100%);
+    background: radial-gradient(circle, rgba(41, 41, 41, 0.5) 20%, rgba(101, 101, 101, 0.5) 30%, rgba(111, 111, 111, 0.5) 40%, rgba(122, 121, 121, 0.5) 50%, rgba(129, 129, 129, 0.5) 60%, rgba(101, 101, 101, 0) 70%);
 
     .logoImg {
-      width: 160px;
-      
-      img {
-        object-fit: contain;
-      }
+      width: 100px;
+      height: 77px;
     }
     .intro {
+      text-align: center;
+      font-weight: bold;
       color: #fff;
+      text-shadow: 1px 1px 5px #42594A;
       margin-top: 20px; 
       font-size: 18px;
       line-height: 30px;
@@ -192,6 +181,8 @@ img {
   margin-top: 50px;
   width: 100%;
   height: 500px;
+  box-shadow: 1px 1px 10px #42594A;
+  border-radius: 20px;
 
   .box {
     position: relative;
@@ -210,20 +201,23 @@ img {
 
     &:nth-child(1) {
       border-radius: 20px 0 0 20px;
+      box-shadow: inset -1px 0px 2px #42594A;
     }
     &:nth-child(2) {
       border-radius: 0px 20px 20px 0px;
+      box-shadow: inset 1px 0px 2px #42594A;
     }
 
     h2 {
       text-align: center;
       font-size: 30px;
-      margin-bottom: 20px; 
+      margin: 20px 0; 
     }
 
     img {
       filter: saturate(.8);
       transition: .3s linear;
+      box-shadow: 0px -1px 5px #42594A;
     }
 
     .btn {
@@ -254,7 +248,7 @@ img {
   position: relative;
   margin-top: 50px;
   width: 100%;
-  height: 500px;
+  height: 550px;
   padding: 15px 0px 15px 150px;
   border-radius: 20px;
   background-image: url("../images/reviewbg.jpg");
@@ -262,20 +256,27 @@ img {
   background-position: center;
   background-size: cover;
   background-attachment: fixed;
+  box-shadow: inset 0px 0px 20px #000000;
 
   .inner {
     overflow: hidden;
 
     h1 {
+      position: absolute;
+      top: 10px;
+      left: 30px;
       font-size: 30px;
       height: 35px;
+      color: #fff;
+      text-shadow: 1px 1px 5px #42594A;
     }
     
     .view {
       position: absolute;
       left: 0;
+      bottom: 0px;
       width: 2000px;
-      height: calc(100% - 35px);
+      height: calc(100% - 55px);
       display: flex;
       justify-content: flex-start;
       align-items: center;
@@ -294,7 +295,7 @@ img {
 
         .inner {
           border-radius: 20px;
-          box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.689);
+          box-shadow: 2px 2px 6px #000000;
 
           .reviewImg {
             width: 100%;
@@ -357,4 +358,9 @@ img {
   width: 100%;
   height: 600px;
   padding: 15px 150px;
+  
+  .inner {
+    border-radius: 20px;
+    box-shadow: 1px 1px 10px #42594A;
+  }
 }
