--- a/scss/review.scss
+++ b/scss/review.scss
@@ -1,36 +1,3 @@
-// common
-img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-}
-.inner {
-  position: relative;
-  width: 100%;
-  height: 100%
-}
-.center {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-.btn {
-  width: 180px;
-  height: 50px;
-  background-color: yellow;
-  border: 3px solid #000;
-  border-radius: 30px;
-  font-size: 20px; 
-  cursor: pointer;
-  transition: .2s linear;
-
-  &:hover {
-    background: #fff;
-    color: #333;
-    transform: scale(1.05);
-  }
-}
-
 .board {
   margin-top: 50px;
   width: 100%;
@@ -41,10 +8,12 @@ img {
     width: 265px;
     height: 40px;
     font-size: 25px;
+    font-weight: bold;
     .bar {
+      margin-top: 2px;
       width: 100%;
       height: 3px;
-      background: yellow;
+      background: #AEF2D9;
       border-radius: 1.5px;
     }
   }
@@ -52,36 +21,67 @@ img {
   .searchBox {
     position: absolute;
     top: 0;
-    right: 0;
+    right: 10%;
     width: 230px;
     height: 40px;
     padding: 5px;
-    border: 1px solid #000;
+    border: 1px solid #42594A;
     border-radius: 30px;
     overflow: hidden;
     flex-wrap: wrap;
+    box-shadow: inset 0px 0px 3px #42594A;
+    transition: .2s linear;
+
+    &.onFocus {
+      box-shadow: inset 0px 0px 3px #AEF2D9;
+    }
 
     input {
       height: 100%;
       width: 160px;
       border: none;
       outline: none;
-      font-size: 18px;
+      font-size: 16px;
     }
 
     .searchIcon {
       width: 20px;
       height: 20px;
       cursor: pointer;
+
+      &.onFocus {
+        svg path {
+          fill: #AEF2D9;
+          stroke: #42594A;
+          stroke-width: 2;
+        }  
+      }
+
+      svg path {
+        fill: #42594A;
+        stroke: #42594A;
+        stroke-width: 2;
+        transition: .2s linear;
+      }
     }
   }//searchBox
+
+  .write {
+    position: absolute;
+    top: 0px;
+    right: 0;
+    height: 40px;
+    width: 80px;
+    font-size: 16px;
+    font-weight: bold;
+  }
 
   .boardList {
     width: 100%;
     height: 750px;
     margin-top: 30px;
     display: flex;
-    justify-content: flex-start;
+    justify-content: space-evenly;
     align-items: flex-start;
     flex-wrap: wrap;
 
@@ -91,35 +91,56 @@ img {
       height: 150px;
       border-radius: 20px;
       overflow: hidden;
-      border: 1px solid #000;
-      margin-right: 70px;
+      margin-right: 0px;
       margin-bottom: 30px;
+      background-color: #F2EFE9;
+      box-shadow: 1px 1px 5px #42594A;
+
+      &:nth-of-type(even) {
+        margin-right: 0;
+      }
 
       img {
         width: 30%;
         height: 100%;
+        box-shadow: 0px 1px 5px #42594A;
+        margin-right: 10px;
       }
 
       .cardText {
-        padding: 5px;
-        font-size: 13px;
+        height: 100%;
+        padding: 15px 10px;
+        font-size: 14px;
+        text-shadow: 1px 1px 1px #42594a3b;
 
+        .box {
+          justify-content: flex-start;
+          div {
+            &:nth-of-type(1) {
+              width: 50%;
+            }
+          }
+        }
         div {
           margin-bottom: 5px;
           cursor: default;
+          letter-spacing: 1px;
 
-          &:nth-of-type(4) {
+          &:nth-of-type(3) {
+            padding: 10px;
+            border-radius: 20px;
             margin-bottom: 0;
-            line-height: 18px;
-            overflow: hidden;
-            text-overflow: ellipsis;
-            display: -webkit-box;
-            -webkit-line-clamp: 3;
-            -webkit-box-orient: vertical;
+            line-height: 19px;
+            box-shadow: inset 0px 0px 3px #42594A;
+            background-color: #fff;
+            .name {
+              margin-bottom: 0;
+            }
           }
-          span {
-            font-size: 11px;
+          .name {
+            font-size: 13px;
             font-weight: bold;
+            text-shadow: none;
           }
         }
       }
