--- a/scss/common.scss
+++ b/scss/common.scss
@@ -32,3 +32,12 @@ img {
     transform: scale(1.05);
   }
 }
+
+footer {
+  margin-top: 100px;
+  width: 100%;
+  height: 100px;
+  font-size: 16px;
+  background-color: #F2EFE9;
+  box-shadow: 0px -1px 10px #42594A;
+}
