--- a/scss/common.scss
+++ b/scss/common.scss
@@ -39,5 +39,5 @@ footer {
   height: 100px;
   font-size: 16px;
   background-color: #F2EFE9;
-  box-shadow: 0px -1px 10px #42594A;
+  box-shadow: 0px -1px 5px #42594a87;
 }
