--- a/scss/main.scss
+++ b/scss/main.scss
@@ -184,6 +184,7 @@
   height: 500px;
   box-shadow: 1px 1px 10px #42594A;
   border-radius: 20px;
+  background-color:#F2EFE9;
 
   .box {
     position: relative;
@@ -308,7 +309,7 @@
           .reviewText {
             width: 100%;
             height: 40%;
-            background: #fff;
+            background-color:#F2EFE9;
             border-radius: 0 0 20px 20px;
           }
         }
