--- a/css/main.css
+++ b/css/main.css
@@ -18,6 +18,7 @@
   height: 100%;
   opacity: 0;
   transition: 0.5s linear;
+  filter: saturate(1.5);
 }
 .mainSlide li.on {
   opacity: 1;
@@ -159,6 +160,7 @@
   height: 500px;
   box-shadow: 1px 1px 10px #42594A;
   border-radius: 20px;
+  background-color: #F2EFE9;
 }
 .content .box {
   position: relative;
@@ -271,7 +273,7 @@
 .review .inner .view .card .inner .reviewText {
   width: 100%;
   height: 40%;
-  background: #fff;
+  background-color: #F2EFE9;
   border-radius: 0 0 20px 20px;
 }
 .review .inner .toRight {
