--- a/scss/main.scss
+++ b/scss/main.scss
@@ -311,6 +311,45 @@
             height: 40%;
             background-color:#F2EFE9;
             border-radius: 0 0 20px 20px;
+            box-shadow: inset -1px 0px 4px #42594A;
+            .cardText {
+              height: 100%;
+              padding: 15px 10px;
+              font-size: 13px;
+              text-shadow: 1px 1px 1px #42594a3b;
+      
+              .box {
+                justify-content: flex-start;
+                div {
+                  &:nth-of-type(1) {
+                    width: 50%;
+                  }
+                }
+              }
+              div {
+                margin-bottom: 5px;
+                cursor: default;
+                letter-spacing: 1px;
+      
+                &:nth-of-type(3) {
+                  height: 95px;
+                  padding: 10px;
+                  border-radius: 20px;
+                  margin-bottom: 0;
+                  line-height: 19px;
+                  box-shadow: inset 0px 0px 3px #42594A;
+                  background-color: #fff;
+                  .name {
+                    margin-bottom: 0;
+                  }
+                }
+                .name {
+                  font-size: 11px;
+                  font-weight: bold;
+                  text-shadow: none;
+                }
+              }
+            }
           }
         }
       }
